# autovalidate

./: .gitignore  README.md  book.toml  config.toml  pyproject.toml  requirements.txt  run.py  submit_synthseg.sh
.github/workflows/: book.yml
autovalidate/: cleanup.py  combine.py  config.py  delete_files.py  io.py  morphology.py  pipeline.py  segmentation.py
autovalidate/cleanup/: overlaps.py
autovalidate/combine/: combine_labels.py
autovalidate/io/: file_io.py  filename_builder.py  npy_io.py  (+2 more)
batch_scripts/: combine_brain+skull+CSF.py  combine_strains+brains.py  create_boundary_layer.py  delete_white_voxels.py  extract_CSF.py  extract_brain.py  extract_skull_remove_voxels.py  run_resample.qsub  run_synthseg.qsub  search_and_move_original_scans.py  submit_resample_jobs.sh  submit_synthseg_jobs.sh
book/: SUMMARY.md  configuration.md  fidelity.md  hpc.md  installation.md  introduction.md  labels.md  membranes.md  quick_start.md
hpc/: job.sh  submit.py
scripts/: combine_all.py  create_boundary_layer.py  delete_folders.py  extract_components.py  fix_overlaps.py  hpc_synthseg_warper.py  move_scans.py  run_synthseg_locally.py
tests/: test_cleanup.py  test_cleanup_overlaps.py  test_combine.py  test_combine_labels.py  test_config.py  test_delete_folders.py  test_file_io.py  test_filename_builder.py  test_hpc_synthseg_warper.py  test_io.py  test_morphology.py  test_morphology_skull.py  test_nifti_io.py  test_npy_io.py  test_path_resolver.py  test_pipeline.py  test_segmentation.py  test_segmentation_common.py  test_segmentation_fsl.py  test_segmentation_synthseg.py
(+16 files in other folders)
