[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autovalidate"
version = "0.1.0"
description = "Automated brain mask generation pipeline for finite element model validation."
requires-python = ">=3.11"
dependencies = [
    "nibabel",
    "numpy",
    "scipy",
    "scikit-image",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autovalidate*"]
